Clean up index and jre reduction